# tantivy-server

./: .gitignore  Cargo.toml  README.md
config/: app.yml  log.yml  stop_word.txt
src/: error.rs  main.rs  server.rs  util.rs  util.rs.b
src/index/: add.rs  create.rs  delete.rs  jieba_tokenizer.rs  mod.rs  search.rs
test_index/book/: .managed.json  meta.json
