[package]
name = "tantivy_server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
log = "0.4.14"
log4rs = "1.0.0"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
serde_yaml = "0.8.17"
# clap = "3.0.0-beta.2"
# tantivy = "0.15.3"
tantivy = { git = "https://github.com/quickwit-inc/tantivy", rev = "c12e07f0ce401461a4ecd8411b8ebdf51e5f5c6d" }
# tantivy = { path = "tantivy" }
jieba-rs = "0.6.5"
# cang-jie = "0.12.0"
lazy_static = "1.4.0"
regex = "1.5.4"